<?php 
class emprunt {
    private $id ;
    private $datDebut ;
    private $dateReteurPrevu ;
    private $dateReteurReel ;
    private $id_lecteur ;
    private $id_livre ;

}