<?php

class lecteur{
    private $id ;
    private $nom;
    private $prenom ;
    private $numCarte ;
    private $adresse ;
    private $id_emprunt ;
}